# python-redis-mixin

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  examplePython.py  hello.py  pyproject.toml
DockerRedis/: Master.Dockerfile  ReplicaF.Dockerfile  ReplicaS.Dockerfile
DockerRedis/config/: master.conf  replica.conf  second.conf  sentinel.conf
docs/: aiGenreratedBasicCode.txt
mixin/: config.py  conn.py  controller.py  errors.py  mixins.py  rows.py  schemas.py
redis/: master.conf  replica.conf
redis/config/: master.conf
rtest/: app.py  print_actions.py  test_mixin.py
