[project]
name = "python-redis-mixin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "cryptography>=44.0.1",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "redis>=5.2.1",
]
